--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PREFIXE=.
 NOM_OWNER=Tsk.Rosa🌹
 NUMERO_OWNER=+241 04 08 89 42
 MODE=private
-SESSION_ID=Ovl-MD_wugcl6Sn_SESSION-ID
-STICKER_PACK_NAME=ᴏᴠʟ-ᴍᴅ-ᴠ𝟸
+SESSION_ID=Ovl-MD_v3pvx9Kd_SESSION-ID
+STICKER_PACK_NAME=Tsk.rosa🌹
 STICKER_AUTHOR_NAME=SISTA-MK
 NOM_BOT=SISTA-MK
